# homelab

./: .gitignore  .sops.yaml  CLAUDE.md  NOTES.md  README.md  ansible.cfg  bootstrap.bash  homelab.code-workspace  homelab.yaml  justfile  mise.toml  pyproject.toml
.zed/: settings.json
Ansible/: ansible.cfg  homelab.yaml  requirements.yml
Ansible/inventory/: hosts.ini
Ansible/playbooks/: generate-keys.yaml  proxmox-fs.yaml  proxmox-hosts.yaml  proxmox-nfs.yaml  proxmox-nixos-ct.yaml  proxmox-node-exporter.yaml
Ansible/vars/: secrets.yaml  ssh_users.yaml
Nix/: flake.nix
Nix/modules/: adguardhome.nix  (+12 more)
Terraform-OpenTofu/: .terraform.lock.hcl  data.tf  images.tf  lxc-nixos.tf  outputs.tf  providers.tf  pve-hosts.tf  talos.tf  ubuntu-docker.tf  ubuntu-template.tf  variables.tf  versions.tf  vm-talos.tf  vm-ubuntu-docker.tf  vm-ubuntu-template.tf  vm-ubuntu.tf  vm-windows-server.tf  windows-server.tf
ansible/: requirements.yml
deployment/: .terraform.lock.hcl  0-test.tf  1-template.tf  2-core-vms.tf  providers.tf  variables.tf
docs/: architecture.drawio  architecture.rtb
inventory/: hosts.ini
plans/: btrfs-scrub-monitoring.md  dns-redundancy-keepalived.md  k8s-gateway-api-https.md  network-improvements-consolidation.md
playbooks/: generate-keys.yaml  proxmox-hosts.yaml  proxmox-template.yaml  ubuntu-docker.yaml
proxmox-deployment/: .gitignore  .terraform.lock.hcl  core-ubuntu-docker.tf  hash-password.py  hosts.tf  providers.tf  ubuntu-docker.tf  ubuntu-template.tf  variables.tf  vm-variables.tf  windows-server.tf
vars/: secrets.yaml  ssh_users.yaml
(+60 files in other folders)
